<resources>
    <string name="app_name">Vault</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_share">Share</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_Register">Register</string>
    <string name="action_login">Log In</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nav_forgot_password">Forgot Password</string>
    <string name="nav_account_register">Don\'t have an account ? Register</string>
    <string name="nav_existing_user_login">Existing User ? Login</string>
    <string name="app_power">Powered by DevNet</string>
    <string name="notification">Notification</string>
    <string name="add_password">Add Password</string>
</resources>