<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:background="@color/white"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.authentication.AuthActivity">

<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<LinearLayout
    android:id="@+id/authentication_linearlayout_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:visibility="visible"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authentication_TextInputLayout_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        android:hint="@string/prompt_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authentication_TextInputEditText_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/black"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authentication_TextInputLayout_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        app:endIconMode="password_toggle"
        android:hint="@string/prompt_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authentication_TextInputEditText_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:hintTextColor="@color/black"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/authentication_textView_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/nav_forgot_password"
        android:textColor="@color/white"
        android:textStyle="bold" />
    <Button
        android:id="@+id/authentication_Button_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/lavender"
        android:text="@string/action_login"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="start"
            android:text="@string/nav_account_register"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/authentication_textView_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/action_Register"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>



</LinearLayout>

<LinearLayout
    android:id="@+id/authentication_linearlayout_SignUp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authentication_TextInputLayout_SignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        android:hint="@string/prompt_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authentication_TextInputEditText_SignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/black"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authentication_TextInputLayout_SignUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        app:endIconMode="password_toggle"
        android:hint="@string/prompt_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authentication_TextInputEditText_SignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:hintTextColor="@color/black"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/authentication_TextInputLayout_SignUpCPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        app:endIconMode="password_toggle"
        android:hint="@string/prompt_confirm_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/authentication_TextInputEditText_SignUpCPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:hintTextColor="@color/black"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/authentication_Button_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/action_Register"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/authentication_textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/nav_existing_user_login"
        android:textColor="#475CD1"
        android:textStyle="bold" />
</LinearLayout>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_power"
    android:layout_marginBottom="30dp"
    android:textColor="@color/black"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>